feat: implement GIS map rendering with performance optimizations and backend administrative user management structure